--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,4 @@ dependencyResolutionManagement {
 rootProject.name = "My Application"
 include ':app'
 include ':app:database'
+include ':app:database_2'
